cluster/homelab/core/longhorn-system/np-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-ui-frontend
  namespace: longhorn-system
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - port: 8000
      protocol: TCP
    - port: 80
      protocol: TCP
  podSelector:
    matchLabels:
      app: longhorn-ui
  policyTypes:
  - Ingress
